build.log
Configuration on demand is an incubating feature.
> Task :clean
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :assemble
> Task :compileTestJava NO-SOURCE
> Task :processTestResources NO-SOURCE
> Task :testClasses UP-TO-DATE
> Task :test SKIPPED
> Task :check UP-TO-DATE
> Task :build
> Task :integration-tests:clean
> Task :integration-tests:processResources
> Task :integration-tests:createDummyFile
> Task :integration-tests:processTestResources NO-SOURCE
> Task :common:clean
> Task :aws-integration:clean
> Task :api:clean
> Task :api:processResources
> Task :api:processTestResources NO-SOURCE
> Task :aws-integration:processResources
> Task :batch:clean
> Task :aws-integration:processTestResources
> Task :data:clean
> Task :web:clean
> Task :batch:processResources
> Task :service:clean
> Task :batch:createDummyFile
> Task :web:processResources
> Task :batch:processTestResources
> Task :service:processResources
> Task :data:processResources
> Task :data:processTestResources NO-SOURCE
> Task :web:createDummyFile

> Task :data:validateEntities
Validating entity classes...
Entity validation complete.

> Task :web:processTestResources NO-SOURCE
> Task :service:createDummyFile
> Task :service:processTestResources NO-SOURCE
> Task :common:compileJava FROM-CACHE
> Task :common:processResources
> Task :common:classes
> Task :common:jar
> Task :common:bootJarMainClassName
> Task :common:bootJar SKIPPED
> Task :common:assemble
> Task :common:compileTestJava SKIPPED
> Task :common:processTestResources NO-SOURCE
> Task :common:testClasses UP-TO-DATE
> Task :common:test SKIPPED
> Task :common:check UP-TO-DATE
> Task :common:build
> Task :api:compileJava FROM-CACHE
> Task :api:classes
> Task :data:compileJava FROM-CACHE
> Task :data:classes
> Task :data:jar
> Task :api:bootJarMainClassName
> Task :api:bootJar SKIPPED
> Task :api:jar
> Task :api:assemble
> Task :api:compileTestJava SKIPPED
> Task :api:testClasses UP-TO-DATE
> Task :api:test SKIPPED
> Task :api:check UP-TO-DATE
> Task :api:build
> Task :data:bootJarMainClassName
> Task :data:bootJar SKIPPED
> Task :data:assemble
> Task :data:compileTestJava SKIPPED
> Task :data:testClasses UP-TO-DATE
> Task :data:test SKIPPED
> Task :data:check UP-TO-DATE
> Task :data:build
> Task :service:compileJava FROM-CACHE
> Task :service:classes
> Task :aws-integration:compileJava FROM-CACHE
> Task :aws-integration:classes
> Task :service:jar
> Task :aws-integration:bootJarMainClassName
> Task :aws-integration:bootJar SKIPPED
> Task :aws-integration:jar
> Task :aws-integration:assemble
> Task :aws-integration:compileTestJava SKIPPED
> Task :aws-integration:testClasses
> Task :aws-integration:test SKIPPED
> Task :aws-integration:check UP-TO-DATE
> Task :aws-integration:build
> Task :service:bootJarMainClassName
> Task :service:bootJar SKIPPED
> Task :service:assemble
> Task :service:compileTestJava SKIPPED
> Task :service:testClasses UP-TO-DATE
> Task :service:test SKIPPED
> Task :service:check UP-TO-DATE
> Task :service:build
> Task :web:compileJava FROM-CACHE
> Task :web:classes
> Task :web:jar
> Task :web:bootJarMainClassName

> Task :batch:compileJava
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

> Task :batch:classes
> Task :web:bootJar
> Task :web:assemble
> Task :web:compileTestJava SKIPPED
> Task :web:testClasses UP-TO-DATE
> Task :web:test SKIPPED
> Task :web:check UP-TO-DATE
> Task :web:build

> Task :integration-tests:compileJava UP-TO-DATE
/Users/davhasan/Downloads/gradle80-testing/integration-tests/src/main/java/com/gradle80/test/config/TestSecurityConfig.java:82: error: method does not override or implement a method from a supertype
    @Override
    ^
Note: /Users/davhasan/Downloads/gradle80-testing/integration-tests/src/main/java/com/gradle80/test/config/TestSecurityConfig.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

> Task :integration-tests:classes
> Task :integration-tests:jar
> Task :integration-tests:compileTestJava SKIPPED
> Task :integration-tests:testClasses UP-TO-DATE
> Task :batch:bootJar
> Task :batch:jar
> Task :batch:assemble
> Task :batch:compileTestJava SKIPPED
> Task :batch:testClasses
> Task :batch:test SKIPPED
> Task :batch:check UP-TO-DATE
> Task :batch:build
> Task :integration-tests:bootJarMainClassName
> Task :integration-tests:bootJar SKIPPED
> Task :integration-tests:assemble
> Task :integration-tests:test SKIPPED
> Task :integration-tests:check UP-TO-DATE
> Task :integration-tests:build

[Incubating] Problems report is available at: file:///Users/davhasan/Downloads/gradle80-testing/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.13/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD SUCCESSFUL in 4s
50 actionable tasks: 43 executed, 6 from cache, 1 up-to-date
